Fix components layout shift issue

--- a/src/assets/styles/components/base/button.module.scss
+++ b/src/assets/styles/components/base/button.module.scss
@@ -19,8 +19,6 @@
 	}
 
 	> span {
-		width: 28px;
-		height: 28px;
 		display: flex;
 		align-items: center;
 		justify-content: center;
