--- a/src/assets/styles/components/sections/about/footer.module.scss
+++ b/src/assets/styles/components/sections/about/footer.module.scss
@@ -21,6 +21,7 @@
 			line-height: 44.48px;
 			text-align: center;
 			margin: var(--appbarHeight) 0 0;
+			padding: 20px;
 		}
 	}
 
@@ -54,7 +55,7 @@
 
 			> .navButton {
 				background: black;
-				padding: 0 10px;
+				padding: 0 35px;
 
 				> p {
 					font-family: 'DM Sans', sans-serif;
@@ -93,6 +94,7 @@
 
 		> .newsLetter {
 			width: 100%;
+			height: 30px;
 			display: flex;
 			gap: 10px;
 			padding: 0 30px;
