--- a/src/assets/styles/components/sections/about/periodBox.module.scss
+++ b/src/assets/styles/components/sections/about/periodBox.module.scss
@@ -25,13 +25,14 @@
 		> img {
 			width: 100%;
 			padding-right: 10px;
+			margin: -10px 0;
 		}
 
 		> p {
 			font-family: Poppins, sans-serif;
 			font-weight: 300;
 			font-size: 14px;
-			line-height: 28.9px;
+			line-height: 25.9px;
 			margin: 0 34px;
 		}
 	}
